# libhdlc

./: .gitignore  CMakeLists.txt  Makefile  README.md
examples/: CMakeLists.txt
examples/basic/: CMakeLists.txt
examples/basic/src/: main.c
lib/: CMakeLists.txt
lib/include/: hdlc.h
lib/src/: hdlc.c
tests/: CMakeLists.txt
tests/src/: main.cpp
